# mun

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: debug_x11.rs  test_egui.rs  test_move_bottom_left.rs  test_move_top_left.rs  test_visuals.rs  test_x11.rs
src/: app_scanner.rs  config.rs  launcher.rs  main.rs  window_manager.rs
src/adapters/: mod.rs
src/adapters/bookmarks/: chromium.rs  firefox.rs  mod.rs  safari.rs
src/adapters/linux/: app_scanner.rs  bookmark.rs  browser.rs  icon.rs  mod.rs  system_tray.rs  window_manager.rs
src/adapters/macos/: app_scanner.rs  bookmark.rs  browser.rs  mod.rs  system_tray.rs  window_manager.rs
src/domain/: app_info.rs  autostart.rs  calculator.rs  mod.rs  tray_event.rs  window_action.rs
src/launcher/: hotkey.rs  icon.rs  icon_cache.rs  mod.rs  search.rs  settings.rs  tray.rs
src/ports/: app_scanner.rs  bookmark.rs  browser.rs  mod.rs  platform.rs  system_tray.rs  window_manager.rs
