[package]
name = "mun"
version = "0.1.0"
edition = "2021"
description = "Alfred-style launcher and Rectangle-like window tiling utility"
authors = ["ykim"]

[dependencies]
# GUI for launcher
eframe = "0.27"
egui = "0.27"
fuzzy-matcher = "0.3.7"
global-hotkey = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
urlencoding = "2.1.3"
image = "0.25"
ab_glyph = "0.2"
directories = "6.0"

# Cross-platform window manipulation
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
ksni = { version = "0.3", features = ["blocking"] }
