[package]
name = "mun"
version = "0.0.0"
edition = "2024"
description = "Alfred-style launcher and Rectangle-like window tiling utility"
authors = ["ykim"]

[dependencies]
eframe = "0.34"
egui = "0.34"
fuzzy-matcher = "0.3.7"
global-hotkey = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
urlencoding = "2.1.3"
directories = "6.0"
log = "0.4"
env_logger = "0.11"
arboard = "3"
image = "0.25"
ab_glyph = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
ksni = { version = "0.3", default-features = false, features = ["async-io", "blocking"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
tray-icon = { version = "0.22", default-features = false }

[package.metadata.packager]
product-name = "Mun"
identifier = "com.example.mun"
before-packaging-command = "cargo build --release"

[package.metadata.packager.macos]
background-app = true
minimum-system-version = "13.0"
